--- a/PullDataForGoDaddy/PullDataForGoDaddy.csproj
+++ b/PullDataForGoDaddy/PullDataForGoDaddy.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\BaseRequest.cs" />
+    <Compile Include="Models\BasicRequest.cs" />
     <Compile Include="Models\Industry.cs" />
     <Compile Include="Models\IndustryRequest.cs" />
     <Compile Include="Models\PullDataContext.cs" />
